--- a/Alpaca_LLM_API.ipynb
+++ b/Alpaca_LLM_API.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyOsSlB++3f64cCwrMyDr/MA",
+      "authorship_tag": "ABX9TyOLlVeZx40vbOdLkPuyfwZd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -15566,7 +15566,6 @@
         "        top_p=0.95,\n",
         "        repetition_penalty=1.2,\n",
         "    )\n",
-        "    print(\"Generating...\")\n",
         "    generation_output = model.generate(\n",
         "        input_ids=input_ids,\n",
         "        generation_config=generation_config,\n",
@@ -15580,7 +15579,7 @@
       "metadata": {
         "id": "pDqzuSR1kmOv"
       },
-      "execution_count": 20,
+      "execution_count": 29,
       "outputs": []
     },
     {
@@ -15611,8 +15610,24 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "##Demonstration of the model outputs with/without prompt template"
+      ],
+      "metadata": {
+        "id": "_rYjXmhEzdpa"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
+        "print(\"Generated without template:\")\n",
+        "prompt=\"Reply with 'hello from alpaca'\"\n",
+        "reply = alpaca_talk(prompt)\n",
+        "print(reply)\n",
+        "print(\"------------------\")\n",
+        "\n",
+        "print(\"Generated with template:\")\n",
         "prompt = get_prompt(\"Reply with 'hello from alpaca'\")\n",
         "reply = alpaca_talk(prompt)\n",
         "print(reply)"
@@ -15622,15 +15637,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "F-MCoPSYkrSD",
-        "outputId": "a46fa995-ec9f-497d-fe5d-f7e70db2bc92"
+        "outputId": "88b4359d-6ca3-4381-f277-84a1b48d62ae"
       },
-      "execution_count": 28,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Generating...\n",
+            "Generated without template:\n",
+            " Reply with 'hello from alpaca'\n",
+            "I am a 10 year old girl who loves to read and write. I have been writing stories since i was about five years old, but now that im older it has become more of an obsession than just something fun to do! My favourite genres are fantasy/sci-fi (i love anything magical) and mystery/thriller.\n",
+            "------------------\n",
+            "Generated with template:\n",
             " Below is an instruction that describes a task. Write a response that appropriately completes the request.\n",
             "  ### Instruction:Reply with 'hello from alpaca'\n",
             "  ### Response:\n",
